waybar: fix missaligned font issue

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -37,8 +37,8 @@
 
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-    font-size: 13px;
+    font-family: FontAwesome;
+    font-size: 16px;
     border: none;
     border-radius: 0px;
 }
@@ -70,7 +70,6 @@ window#waybar.empty .modules-center {
     padding: 0px 1px;
     border-radius: 0px 15px 15px 0px;
     border: 0px;
-    font-weight: bold;
     font-style: normal;
     font-size: 16px;
     color: @subtext1;
@@ -128,7 +127,7 @@ window#waybar.empty #window {
     border-radius: 0px 0px 15px 15px;
     border: 0px;
     font-style: normal;
-    font-size: 13px;
+    font-size: 16px;
     color: @base;
     min-width: 100px;
 }
